   * Update Tesseract 5 Alpha to "2020-11-27"
   * Translate: Refactor + paragraph handling strategies - thx Brummochse 
   * Set default subtitle text box font size to 12
   * Use "Min gap between subtitles" when loading scc - thx batatop
   * Improve SoftNi format - thx EduGomes
   * List possible Bing translator token endpoints
   * Internal project restructure + readying for .NET 5
   * Do not show full file path in title bar - thx Kristo
   * "File - Import" grouping - thx OmrSi/ivandrofly
   * Allow em-dash for sentence ending - thx Boulder08
   * Auto fix mkv subs without duration - thx uckthis
   * Optimize writing Blu-ray .sup files
   * Enable "Add new" for nOCR char inspect
   * Add "Subtitle.Parse" methods for simpler loading of subtitles (libse)
   * Change ms to "Seconds" in Karaoke/Typewriter - thx frenchiveruti/OmrSi
   * Add toggle preview on video (mpv) - thx LeonCheung/OmrSi
   * Focus text box after first insert
* FIXED:
   * Fix frame rate bug in FCP+image - thx Christopher
   * Fix issues with ismt format - thx Bersu
   * Fix bdsup right align export issue - thx von Suppé
   * Fix export FAB image script save path - thx rotorwave
   * Fix crash loading Cheetah Caption - thx mook1975
   * Fix crash in video menu with video without audio - thx GrampaWildWilly
   * Fix crash in nhunspell suggest - thx SeproDE
   * Minor fixes for bilangual split - thx LeonCheung/OmrSi
   * Fix crash on invalid time codes from ts files
   * Fix resolution when exporting dvbsub - thx Janusz
   * Fix translate with weird new lines - thx MarianTum
   * Fix crash in .ASS preview - thx LeonCheung
   * Fix crashes in OCR image pre-processing - thx VoodooFX
   * Fix list view column auto size w style - thx Jamakmake
   * Fix Tesseract lang parameter in cmd line OCR on Linux - thx depeo
   * Fix crash in binOcr - thx jpinto0
   * Don't log tag info when no sub - thx Jamakmake
   * Fix ANSI writing for a few chars (…/®/©) - thx fr